--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!-- <link type="text/css" rel="stylesheet" href="stylesheet/style.css"> -->
 	<link rel="stylesheet" type="text/css" href="stylesheet/main.css">
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="//code.jquery.com/jquery.js"></script>
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<title></title>
+	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
+
+	<title>Calories Counter</title>
 </head>
 <body>
 	<div class="container">
