--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<!-- <link type="text/css" rel="stylesheet" href="stylesheet/style.css"> -->
+	<link rel="stylesheet" type="text/css" href="stylesheet/popup.css">
 	<link rel="stylesheet" type="text/css" href="stylesheet/main.css">
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 	<script src="//code.jquery.com/jquery.js"></script>
