insert data into  database

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,8 @@
 		<section class="popupBody">
 
 			<div class="user_register">
-				<form method='POST' action='/index'>
+				
+				<form method='POST' action='/'>
 					<label>First name</label>
 					<input name='firstName' type="text" placeholder='i.e. Russell'>
 					</br>
@@ -31,7 +32,7 @@
 					<input name='password' type="password" placeholder='i.e. seahawks (Min 8 characters)'>
 					</br>
 
-					<label>Re-enter your password</label>
+					<label>Confirm password</label>
 					<input name='password2' type="password" placeholder='i.e. seahawks (Min 8 characters)'>
 					</br>
 
@@ -41,7 +42,7 @@
 
 					<div class="action_btns">
 						<div>
-							<a href="#" class="btn btn_red">Register</a>
+							<input type='submit' class="btn btn_red">
 						</div>
 					</div>
 				</form>
