--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -12,8 +12,13 @@
 	<title>Calories Counter</title>
 </head>
 <body>
+
+	
+
 	<div class="container">
+		<% include partials/alerts %>
 		<%- body %>	
+    	
 	</div>
 	
 </body>
