--- a/views/add.ejs
+++ b/views/add.ejs
@@ -6,9 +6,9 @@
 	<hr>
 
 	<nav>
-		<a href='#' class='btn btn-primary'>Goal</a>
-		<a href='#' class='btn btn-primary'>Daily Summary</a>
-		<a href='#' class='btn btn-primary'>Add Food</a>
+		<a href='/goal' class='btn btn-primary'>Goal</a>
+		<a href='/diary' class='btn btn-primary'>Daily Summary</a>
+		<a href='/add' class='btn btn-primary'>Add Food</a>
 
 	</nav>
 	</hr>
