--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -1,17 +1,18 @@
 <header>
 
-	<p class='goal_header_p'>Hi, <span class='goal_header_span'>username</span></p>
-	<h1 class='goal_header_h'>Your daily goals</h1>
 	<img class='goal_header_img' src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
-	<hr>
+	<h1 class='goal_header_h'>Your daily goals</h1>
+	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
+
+	
 
 	<nav>
-		<a href='#' class='btn btn-primary'>Goal</a>
-		<a href='#' class='btn btn-primary'>Daily Summary</a>
-		<a href='#' class='btn btn-primary'>Add Food</a>
+		<a href='/goal' class='btn btn-primary'>Goal</a>
+		<a href='/diary' class='btn btn-primary'>Daily Summary</a>
+		<a href='/add' class='btn btn-primary'>Add Food</a>
+		<a href = '/logout' class="btn btn-primary">Log out</a>
 
 	</nav>
-	</hr>
 
 </header>
 
