--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <header>
 	
 	<img src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
-	<h1>Eat more bacon and loose weight</h1>
+	<h1>Ketogenic Diet</h1>
 
 	<a id="modal_trigger" href="#modal" class="btn btn-primary">Sign Up</a>
 
@@ -50,7 +50,7 @@
 <main>
 
 	<article class='about'>
-		<h2>How to enjoy delicious bacon and loose that love handle</h2>
+		<h2>Enjoy bacons and lose your love handle</h2>
 		<img src='/images/bacon_250.jpg' alt='Cheesy bacon' title='Cheesy bacon'>
 		<p>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.</p>
 
@@ -66,7 +66,7 @@
 				<label for="email">Email</label>
 				<input name='email' type="text" class="form-control" id="email" placeholder="Email">
 				<label for="password">Password</label>
-				<input name='password' type="text" class="form-control" id="password" placeholder="Password">
+				<input name='password' type="password" class="form-control" id="password" placeholder="Password">
 			</div>
 		
 			<button type="submit" class="btn btn-primary">Log in</button>
