--- a/views/diary.ejs
+++ b/views/diary.ejs
@@ -41,18 +41,18 @@
 
 		<tr>
 			<th>Goal</th>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
+			<td><%= goal.calories %></td>
+			<td><%= goal.carb %></td>
+			<td><%= goal.fat %></td>
+			<td><%= goal.protein %></td>
 		</tr>
 
 		<tr>
 			<th>Remaining</th>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
-			<td>&nbsp;</td>
+			<td><%= goal.calories %></td>
+			<td><%= goal.carb %></td>
+			<td><%= goal.fat %></td>
+			<td><%= goal.protein %></td>
 		</tr>
 
 	</table>
@@ -61,10 +61,3 @@
 
 
 </main>
-
-<script>
-  $(function() {
-    $( "#datepicker" ).datepicker();
-  });
-</script>
-
