--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -2,12 +2,13 @@
 <html>
 <head>
 
+
 	
 	<!-- datepicker widget -->
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  	<link rel="stylesheet" href="/resources/demos/style.css">
+  	<!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
 
 
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
@@ -17,6 +18,9 @@
 	
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+	
+
+	<script src='js/signup.js'></script>
 	
 	<title>Calories Counter</title>
 </head>
