--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -8,8 +8,6 @@
 	<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   	<script src="//code.jquery.com/jquery-1.10.2.js"></script>
   	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
-  	<!-- <link rel="stylesheet" href="/resources/demos/style.css"> -->
-
 
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
@@ -26,7 +24,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="wrapper">
 		<% include partials/alerts %>
 		<%- body %>	
     	
