--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,6 @@
 	
 	<img src='/images/logo_50.jpg' alt='Bacon logo' title='Eat more bacon'>
 	<h1>Ketogenic Diet</h1>
-
 	<a id="modal_trigger" href="#modal" class="btn btn-primary">Sign Up</a>
 
 	<div id="modal" class="popupContainer" style="display:none;">
@@ -47,24 +46,28 @@
 	<hr>
 </header>	
 
-<main>
-
-	<article class='about'>
+<main class='row'>
+	
+	<article class='about col-xs-8 col-sm-8 col-md-8 col-lg-8'>
 		<h2>Enjoy bacons and lose your love handle</h2>
-		<img src='/images/bacon_250.jpg' alt='Cheesy bacon' title='Cheesy bacon'>
-		<p>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.</p>
+		<img class='col-xs-3 col-sm-3 col-md-3 col-lg-3' src='/images/bacon_250.jpg' alt='Cheesy bacon' title='Cheesy bacon'>
+		<p class='col-xs-9 col-sm-9 col-md-9 col-lg-9'>Eat bacon as much as you want and loose that love handle. It's not a sales pitch. It's purely science. It's called Ketogenic diet. It has been helping people combat with diabetes type II. Sign up to lean more.lorem</p>
 
 	</article>
 
-	<article class='login'>
+	<article class='login col-xs-4 col-sm-4 col-md-4 col-lg-4'>
 		<a src='#' class='btn btn-primary' id='facebook'>Log in with facebook</a>
 		
 		<p>or</p>
 		
+<div class="col-xs-4-offset-4 col-sm-4-offset-4 col-md-4-offset-4 col-lg-4-offset-4">
+	
+</div>
+
 		<form action='/goal' method="POST" role="form">
 			<div class="form-group">
 				<label for="email">Email</label>
-				<input name='email' type="text" class="form-control" id="email" placeholder="Email">
+				<input name='email' type="text" class="col-xs-4-offset-4 col-sm-4-offset-4 col-md-4-offset-4 col-lg-4-offset-4 form-control" id="email" placeholder="Email">
 				<label for="password">Password</label>
 				<input name='password' type="password" class="form-control" id="password" placeholder="Password">
 			</div>
