--- a/views/diary.ejs
+++ b/views/diary.ejs
@@ -7,7 +7,7 @@
 	<nav>
 		<a href='/goal' class='btn btn-primary'>Goal</a>
 		<a href='/diary' class='btn btn-primary'>Diary</a>
-		<a href='/add' class='btn btn-primary'>Add Food</a>
+		<a href='/search' class='btn btn-primary'>Add Food</a>
 		<a href = '/logout' class="btn btn-primary">Log out</a>
 
 	</nav>
@@ -26,9 +26,15 @@
 			<th>Fat</th>
 			<th>Protein</th>
 		</tr>
-
 	</table>
 
+	<tr>
+		<th>Total</th>
+		<td>0</td>
+		<td>0</td>
+		<td>0</td>
+		<td>0</td>
+	</tr>
 
 	<table>
 		<tr>
