--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -7,7 +7,7 @@
 	<nav>
 		<a href='/goal' class='btn btn-primary'>Goal</a>
 		<a id='test' class='btn btn-primary'>Diary</a>
-		<a href='/add' class='btn btn-primary'>Add Food</a>
+		<a href='/search' class='btn btn-primary'>Add Food</a>
 		<a href = '/logout' class="btn btn-primary">Log out</a>
 
 	</nav>
