quantity page finished

--- a/views/diary.ejs
+++ b/views/diary.ejs
@@ -63,7 +63,7 @@
 
 	</table>
 
-	<a href='#' class='btn btn-primary'>Add food</a>
+	<a href='/search' class='btn btn-primary'>Add food</a>
 
 
 </main>
