--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -16,7 +16,7 @@
 
 <main>
 		
-	<form id='test2' action="/diary" method="GET" role="form">
+	<form id='test2' action="/diary" method="POST" role="form">
 		<legend>Daily Goals</legend>
 
 		<div class="form-group">
