--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -18,7 +18,7 @@
 	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
 	
 
-	<script src='js/signup.js'></script>
+	<script src='js/script.js'></script>
 	
 	<title>Calories Counter</title>
 </head>
