--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -26,6 +26,15 @@
 
 	<div class="wrapper">
 		<% include partials/alerts %>
+		
+		<nav>
+			<a href='/goal' class='btn btn-primary'>Goal</a>
+			<a href='/diary' class='btn btn-primary'>Diary</a>
+			<a href='/search' class='btn btn-primary'>Add Food</a>
+			<a href = '/logout' class="btn btn-primary">Log out</a>
+
+		</nav>
+		
 		<%- body %>	
     	
 	</div>
