--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -4,11 +4,20 @@
 	<h1 class='goal_header_h'>Your daily goals</h1>
 	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
 
+	<nav>
+		<a href='/goal' class='btn btn-primary'>Goal</a>
+		<a id='test' class='btn btn-primary'>Diary</a>
+		<a href='/search' class='btn btn-primary'>Add Food</a>
+		<a href = '/logout' class="btn btn-primary">Log out</a>
+
+	</nav>
+
 </header>
 
 <main>
 		
 	<form id='test2' action="/diary" method="POST" role="form">
+		<legend>Daily Goals</legend>
 
 		<div class="form-group">
 			<label class='goal_form_label' for="">Calories</label>
@@ -31,7 +40,7 @@
 
 			<br>
 
-			<button type='submit' class="btn btn-primary">Diary</button>
+			<!-- <button type='submit' class="btn btn-primary">Diary</button> -->
 		</div>
 
 	</form>
