--- a/views/diary.ejs
+++ b/views/diary.ejs
@@ -4,20 +4,13 @@
 	<h1 class='goal_header_h'>Diary</h1>
 	<p class='goal_header_p'>Hi, <span class='goal_header_span'><%= currentUser.name %></span></p>
 
-	<nav>
-		<a href='/goal' class='btn btn-primary'>Goal</a>
-		<a href='/diary' class='btn btn-primary'>Diary</a>
-		<a href='/search' class='btn btn-primary'>Add Food</a>
-		<a href = '/logout' class="btn btn-primary">Log out</a>
-
-	</nav>
-
 </header>
 
 <main>
 
 	<form method='POST' role='form'>
 		<p>Date: <input type="text" id="datepicker"></p>
+		<button type='submit'>
 	</form>
 
 	<table>
