--- a/views/goal.ejs
+++ b/views/goal.ejs
@@ -32,7 +32,7 @@
 
 			<br>
 
-			<!-- <button type='submit' class="btn btn-primary">Diary</button> -->
+			<button type='submit' class="btn btn-primary">Diary</button>
 		</div>
 
 	</form>
