--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,12 +30,11 @@
 
 		<nav>
 			<a href='/goal' class='btn btn-primary'>Goal</a>
-			<a id='test' class='btn btn-primary'>Diary</a>
-			<a href='/search' class='btn btn-primary'>Add Food</a>
+			<a href='/search' class='btn btn-primary'>Food Search</a>
 			<a href = '/logout' class="btn btn-primary">Log out</a>
 
 		</nav>
-	
+
 		<%- body %>	
     	
 	</div>
