--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,14 +11,14 @@
 
   	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" />
 	<link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="stylesheet/main.css">
-	<link rel="stylesheet" type="text/css" href="stylesheet/popup.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheet/main.css">
+	<link rel="stylesheet" type="text/css" href="/stylesheet/popup.css">
 	
 	<script src="//netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/jquery.leanModal.min.js"></script>
+	<script type="text/javascript" src="/js/jquery.leanModal.min.js"></script>
 	
 
-	<script src='js/script.js'></script>
+	<script src='/js/script.js'></script>
 	
 	<title>Calories Counter</title>
 </head>
