working calories on quantity.ejs

--- a/views/log.ejs
+++ b/views/log.ejs
@@ -24,7 +24,7 @@
 	<% logs.forEach(function(logs) { %>
 		<tr>
 			<th><%= logs.nutrient.dataValues.foodName %></th>
-			<td><%= logs.nutrient.dataValues.foodName %></td>
+			<td><%= logs.nutrient.dataValues.calories %></td>
 			<td><%= logs.nutrient.dataValues.carb %></td>
 			<td><%= logs.nutrient.dataValues.fat %></td>
 			<td><%= logs.nutrient.dataValues.protein %></td>
@@ -63,5 +63,12 @@
 
 	</table>
 
-
 </main>
+
+<script>
+
+	$(function() {
+
+	});
+
+</script>
