--- a/views/quantity.ejs
+++ b/views/quantity.ejs
@@ -21,7 +21,7 @@
 		<%= data.report.foods[0].nutrients[0].value %>
 
 		<p>Quantity</p>
-		<input id='quantity' type='text' name='quantity' value='1'>
+		<input id='quantity' type='text' name='quantity' value=''>
 		<p>gram</p>
 		<br>
 
@@ -31,6 +31,7 @@
 		<input id='fat' type='text' name='fat' value='<%=  data.report.foods[0].nutrients[1].value%>'>
 		<p>Protein</p>
 		<input id='protein' type='text' name='protein' value='<%= data.report.foods[0].nutrients[0].value %>'>
+		<input id='calories' type='text' name='calories' value=''>
 
 		<button type="submit" class="btn btn-primary">Add food</button>
 	</form>
@@ -40,27 +41,31 @@
 
 $(function() {
 	
+
+
 	$('#quantity').change(function() {		
-		var quantityValue = parseFloat($('#quantity').val()).toFixed(2);
+		var quantityValue = parseFloat($('#quantity').val());
 		var carbValue = parseFloat($('#carb').val()).toFixed(2);
 		var fatValue = parseFloat($('#fat').val()).toFixed(2);
-		var proteinValue = parseFloat($('#protein').val());
-		var calories;
+		var proteinValue = parseFloat($('#protein').val()).toFixed(2);
+		
 		carbValue = carbValue * quantityValue;
 		fatValue = fatValue * quantityValue;
 		proteinValue = proteinValue * quantityValue;
 
-
-		var newCarbValue = parseFloat(carbValue).toFixed(2);
-		var newFatValue = parseFloat(fatValue).toFixed(2);
-		var newProteinValue = parseFloat(proteinValue).toFixed(2);
+		// var newCarbValue = parseFloat(carbValue).toFixed(2);
+		// var newFatValue = parseFloat(fatValue).toFixed(2);
+		// var newProteinValue = parseFloat(proteinValue).toFixed(2);
 		
-
-
+		var caloriesValue = carbValue + fatValue + proteinValue;
+		console.log(caloriesValue);
+		// var newCaloriesValue = parseFloat(calories).toFixed(2);
+		// console.log(newCaloriesValue);
 				
-		$('#carb').attr('value', newCarbValue);
-		$('#fat').attr('value', newFatValue);
-		$('#protein').attr('value', newProteinValue);
+		$('#carb').attr('value', carbValue);
+		$('#fat').attr('value', fatValue);
+		$('#protein').attr('value', proteinValue);
+		$('#calories').attr('value', caloriesValue);
 		
 	});
 });
