--- a/views/quantity.ejs
+++ b/views/quantity.ejs
@@ -40,27 +40,18 @@
 <script>
 
 $(function() {
-	
-
 
 	$('#quantity').change(function() {		
-		var quantityValue = parseFloat($('#quantity').val());
-		var carbValue = parseFloat($('#carb').val()).toFixed(2);
-		var fatValue = parseFloat($('#fat').val()).toFixed(2);
-		var proteinValue = parseFloat($('#protein').val()).toFixed(2);
+		 quantityValue = parseFloat($('#quantity').val());
+		 carbValue = parseFloat($('#carb').val()).toFixed(2);
+		 fatValue = parseFloat($('#fat').val()).toFixed(2);
+		 proteinValue = parseFloat($('#protein').val()).toFixed(2);
 		
 		carbValue = carbValue * quantityValue;
 		fatValue = fatValue * quantityValue;
 		proteinValue = proteinValue * quantityValue;
-
-		// var newCarbValue = parseFloat(carbValue).toFixed(2);
-		// var newFatValue = parseFloat(fatValue).toFixed(2);
-		// var newProteinValue = parseFloat(proteinValue).toFixed(2);
 		
-		var caloriesValue = carbValue + fatValue + proteinValue;
-		console.log(caloriesValue);
-		// var newCaloriesValue = parseFloat(calories).toFixed(2);
-		// console.log(newCaloriesValue);
+		caloriesValue = carbValue + fatValue + proteinValue;
 				
 		$('#carb').attr('value', carbValue);
 		$('#fat').attr('value', fatValue);
